fixed contact page spacing issues

--- a/contact.css
+++ b/contact.css
@@ -412,5 +412,5 @@ img {
 .contact-text
 {
 
-  width: 100%;
+  width: 100vw;
 }
